--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-toggle-switch": "^3.0.4",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "twilio": "^3.19.1"
   },
   "scripts": {
     "start": "react-scripts start",
