--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "massive": "^5.1.3",
+    "moment": "^2.22.2",
     "react": "^16.4.1",
+    "react-datepicker": "^1.6.0",
+    "react-dates": "^17.2.0",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-toggle-switch": "^3.0.4",
+    "reactstrap": "^6.4.0",
     "redux": "^4.0.0",
     "twilio": "^3.19.1"
   },
